# pfd-split

./: .gitignore  pyproject.toml
pdfsplit/: __init__.py  cli.py  engine.py  errors.py  model.py  render.py  sidecar.py  verify.py  web.py  write.py
pdfsplit/static/: app.js  index.html  style.css
prompts/: 00-SPEC.md  01-engine.md  02-cli.md  03-web.md  04-validate.md  README.md
tests/: conftest.py  test_engine.py  test_sidecar.py  test_verify.py  test_web.py  test_write.py
